--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
-    "build": "ng build --prod && node server.js",
+    "build": "ng build --prod && nodemon server.js",
     "test": "ng test --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "core-js": "^2.4.1",
+    "nodemon": "^1.14.11",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
