--- a/package.json
+++ b/package.json
@@ -21,23 +21,26 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
-    "bootstrap": "^4.0.0",
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
-    "jquery": "^3.3.0",
+    "express": "^4.16.2",
+    "faker": "^4.1.0",
+    "json-server": "^0.12.1",
     "nodemon": "^1.14.11",
-    "popper": "^1.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
+    "@angular-devkit/core": "0.0.28",
     "@angular/cli": "1.6.5",
     "@angular/compiler-cli": "^5.1.0",
     "@angular/language-service": "^5.1.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~9.3.0",
+    "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.9.0",
+    "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -45,9 +48,9 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.2.2",
-    "ts-node": "~4.1.0",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.6.2"
+    "typescript": "~2.5.3"
   }
 }
