--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "^5.1.0",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "faker": "^4.1.0",
+    "jquery": "^3.3.1",
     "json-server": "^0.12.1",
     "nodemon": "^1.14.11",
     "rxjs": "^5.5.6",
