--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/animations": "5.2.9",
+    "@angular/common": "5.2.9",
+    "@angular/compiler": "5.2.9",
+    "@angular/core": "5.2.9",
+    "@angular/forms": "5.2.9",
+    "@angular/http": "5.2.9",
+    "@angular/platform-browser": "5.2.9",
+    "@angular/platform-browser-dynamic": "5.2.9",
+    "@angular/router": "5.2.9",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
@@ -30,15 +30,15 @@
     "jquery": "^3.3.1",
     "json-server": "^0.12.1",
     "nodemon": "^1.14.11",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "rxjs": "^5.5.7",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular-devkit/build-optimizer": "^0.4.0",
+    "@angular-devkit/build-optimizer": "0.4.6",
     "@angular-devkit/core": "0.4.6",
-    "@angular/cli": "^1.7.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
+    "@angular/cli": "1.7.3",
+    "@angular/compiler-cli": "5.2.9",
+    "@angular/language-service": "5.2.9",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~9.4.0",
@@ -54,6 +54,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~5.0.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "2.6.2"
   }
 }
